"📏 responsive: create a responsive view"

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -36,3 +36,9 @@ header.black {
     margin-top: 5px;
     border-radius: 3px;
 }
+
+@media (max-width: 450px) {
+    .header--logo img {
+        width: 80%;
+    }
+}
