--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ body {
     margin-top: -120px;
 }
 
-/* Loading */
 .loading {
     height: 100vh;
     display: flex;
@@ -87,4 +86,10 @@ body {
      transform: translateY(-100%);
     }
    }
+
+@media (max-width: 760px) {
+    .movieRow--left, .movieRow--right {
+        opacity: 1;
+    }
+}
    
