--- a/src/components/featuredMovie/FeaturedMovie.css
+++ b/src/components/featuredMovie/FeaturedMovie.css
@@ -80,3 +80,32 @@
     font-size: 18px;
     color: #999;
 }
+
+@media (max-width: 760px) {
+    .featured {
+        height: 90vh;
+    }
+
+    .featured--name {
+        font-size: 38px;
+    }
+
+    .featured--info {
+        font-size: 16px;
+    }
+
+    .featured--description {
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+
+    .featured--watchbutton, .featured--mylistbutton {
+        font-size: 14px;
+        padding: 10px 20px;
+    }
+
+    .featured--genres {
+        font-size: 14px;
+    }
+}
